# nanopbpp

./: CMakeLists.txt  LICENSE.md  README.md
include/nanopbpp/: .basic_encoder.h.swp  base_extension.h  basic_decoder.h  basic_encoder.h  extension.h  extension_metadata.h  extension_metadata_set.h  extension_set.h  instantiate_extension.h  message.h  message_decoder.h  message_encoder.h  message_metadata.h  message_metadata_set.h  meta_decoder.h  meta_encoder.h  metadata.h
include/nanopbpp/cpp/: get_by_type.h
tests/: .gitignore  CMakeLists.txt  base_extension_tests.cc  basic_decoder_tests.cc  basic_encoder_tests.cc  extension_tests.cc  message_decoder_tests.cc  message_encoder_tests.cc  message_metadata_set_tests.cc  message_tests.cc  meta.h  metadata_tests.cc  nanopb_basic_tests.cc  scenarios.cc  test.proto  uncategorized_tests.cc
